# moka_3d

./: README.md
moka3d/: config_basic.yaml  config_moka.yaml  environment_moka.yml  mokaproject.toml  pyproject.toml
moka3d/Ancillary_material/: SN_map_NGC4388_OIII.fits
moka3d/examples/: config_moka3d.yaml
moka3d/src/moka3d/: amgraphics.py  cli.py  config.py  defaults.py  moka3d_source.py  pipeline.py  plotting.py  rotations.py
moka_3d/: CITATION.cff  LICENSE  README.md  environment.yml
moka_3d/benchmarks/: benchmark_multishell_assembly.py
moka_3d/benchmarks/results/: multishell_assembly_baseline.json  multishell_assembly_optimized.json
moka_3d/docs/: configuration.md  outputs.md  quickstart.md  release_notes_v0.1.md  troubleshooting.md
moka_3d/moka3d/: config_moka.yaml
moka_3d/moka3d/Ancillary_material/: SN_map_NGC7582.fits
moka_3d/moka3d/src/moka3d/: cli.py  config.py  defaults.py  moka3d_source.py  pipeline.py  rotation_curves.py
moka_3d/tests/: _synthetic.py  conftest.py  test_regression_combined_fit.py  test_regression_energetics_units.py  test_regression_findrange.py  test_regression_frequency_doppler.py  test_regression_model_context.py  test_regression_multishell_batch_merge.py  test_regression_plot_kin_maps.py  test_regression_rng_seeding.py  test_regression_scoring_context.py  test_regression_single_shell_ranges.py  test_regression_v_grid_context.py  test_smoke.py
