[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "moka3d"
version = "0.1.0"
description = "3D kinematic modeling of emission-line gas in galaxies"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Cosimo Marconcini", email = "cosimo.marconcini@unifi.it"},
     {name = "Alessandro Marconi", email = "alessandro.marconi@unifi.it"}
]

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "astropy",
    "scikit-image",
    "pyyaml",
    "typer",
    "rich",
    "fast-histogram"
]

[project.urls]
Homepage = "https://github.com/cosimomarconcini/moka3d"
Repository = "https://github.com/cosimomarconcini/moka3d"

[project.scripts]
moka3d = "moka3d.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]